# Reuse-Ai

./: .gitignore  requirements.txt  start-reuse-ai.sh  start_reuse_ai.py
backend/: .env  .env.example  IA.md  manage.py  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/configs/: chat_system_knowledge.yaml  chat_topics.yaml  class_catalog.yaml  disposal_points_catalog.yaml  disposal_rules.yaml  project.yaml
backend/core/: urls.py
backend/docs/: guia_execucao_dataset.md
backend/scripts/: _bootstrap.py  analyze_images.py  bootstrap_env.sh  capture_and_analyze.py  run_api.py  scaffold_dataset.py  split_dataset.py  train.py
backend/site/: classification.css  classification.html
backend/src/accounts/: admin.py  emails.py  gamification.py  models.py  serializers.py  tokens.py  urls.py  views.py
backend/src/accounts/migrations/: 0001_initial.py  0002_userprofile_google_sub.py  0003_gamification.py  0004_userprofile_display_name_updated_at.py  0005_userprofile_avatar_backup.py  0006_alter_xpevent_source_friendship_sustainabilitybattle.py  0007_sustainabilitybattle_completed_at_and_more.py  0008_assistantchatsession_assistantchatmessage.py
backend/src/django_backend/: __init__.py  settings.py  urls.py  views.py
backend/src/reuse_ai/: __init__.py  advisor.py  api.py  catalog.py  chatbot.py  chatbot_api.py  chatbot_knowledge.py  chatbot_llm.py  chatbot_responder.py  config.py  data.py  dataset_splitter.py  disposal_points.py  evaluation.py  location.py  predictor.py  presentation.py  train.py
backend/src/reuse_ai/nlp/: __init__.py  (+1 more)
(+90 files in other folders)
