[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reuse-ai"
version = "0.1.0"
description = "Backend de classificacao visual e orientacao de descarte com geolocalizacao."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Reuse.AI" }]

[tool.setuptools.packages.find]
where = ["src"]